--- a/_.config.yml
+++ b/_.config.yml
@@ -1,5 +1,7 @@
-title: ICS414-Team-2
+title: ICS414 Team 2
 show_downloads: true
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
 github:
   is_project_page: true
