--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: "ICS 414 Team 2"
 show_downloads: true
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-cayman
 github:
   is_project_page: true
