--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: "ICS 414 Team 2"
+title: Hawaii DoE Legislative Tracker
+description: Developed by The Minions
 show_downloads: true
 theme: jekyll-theme-cayman
 github:
